--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
         <li>
           <a href="/contact">Contatos</a>
         </li>
+        <li>
+          <a class="cadastro" href="/cadastrar">Add Terra</a>
+        </li>
       </ul>
       <button onclick="loginredirect()" class="cta-contact">Entrar</button>
     </nav>
