--- a/static/terrenos.css
+++ b/static/terrenos.css
@@ -31,9 +31,11 @@
 
   .container-filtro {
     display: flex !important;
-    align-items: center !important;
-    margin-left: 1100px !important;
+    margin-left: 1140px;
     color: black !important;
+    margin-bottom: 10px;
+    margin-top: 5px;
+
   }
 
   #estados {
@@ -42,28 +44,75 @@
   }
 
   #estados label {
-    margin-top: 5px !important;
     margin-right: 3px !important;
-  }
-
-  
-  .slider {
-    width: 150px !important;
-    margin-left: 5px !important;
-    margin-right: 5px !important;
   }
   
   #metragem {
-    margin-left: 15px !important; 
+    margin-left: 5px !important; 
     display: flex !important;
     align-items: center !important;
   }
-
   
   #metragem label {
-    margin-top: 8px !important;
+    color: black;
+    width: 100%;
+  }
+
+  #span {
+    color: black;
   }
 
   #botao-filtro {
-    margin-left: 10px !important; 
+    margin-top: 2px !important;
+    margin-left: 8px !important;
+    background: #99bf67 !important;
+    background: linear-gradient(0deg, #99bf67 0%, #dfffbc 100%) !important;
+    border: 1px solid #A4C97A;
+    width: 50px;
+    height: 20px;
+  }
+
+  #botao-filtro:before {
+    height: 0%;
+    width: 2px;
+  }
+
+  #botao-filtro:hover {
+    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                -4px -4px 6px 0 rgba(116, 125, 136, .5), 
+      inset -4px -4px 6px 0 rgba(255,255,255,.2),
+      inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+  }
+
+
+  .slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    margin-left: 5px ;
+    margin-right: 5px ;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%; 
+    background: #99bf67;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #99bf67;
+    cursor: pointer;
   }
