--- a/static/terrenos.css
+++ b/static/terrenos.css
@@ -6,8 +6,12 @@
   }
 
   .card{
-    border: 2px solid black;
+    background-color: white;
+    border: 1px solid snow;
     border-radius: 10px;
+    -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   }
 
   .list-view .card .card-body {
@@ -16,11 +20,19 @@
 
   .card-body{
     color: black !important;
+    margin-left: 3px;
+    margin-bottom: 1px;
   }
 
   .card-img-top{
     width: 612px !important;
     height: 408 !important;
+    border-radius: 8px;
+  }
+
+  .card-title{
+    font-size: 21px;
+    margin-bottom: 5px;
   }
 
   .row{
